# ble_keyboard

./: .gitignore  CMakeLists.txt  README.md  partition_table.csv  sdkconfig.old
components/ble/: CMakeLists.txt
components/ble/include/: ble.h
components/ble/src/: ble.c
components/button/: CMakeLists.txt
components/button/include/: button.h
components/button/src/: button.c
components/data_storage/: CMakeLists.txt
components/data_storage/include/: data_storage.h
components/data_storage/src/: data_storage.c
main/: main.c  main_config.h
